<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.ftdev</groupId>
    <artifactId>drawing-lib</artifactId>
    <version>2.1</version>
    <packaging>jar</packaging>

    <url>https://github.com/FlorinTeo/EduCode</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main</sourceDirectory>
        <testSourceDirectory>src/test</testSourceDirectory>
        
        <resources>
            <resource>
                <directory>src/main</directory>
                <includes>
                    <include>edu/ftdev/**</include>
                </includes>
            </resource>
            <resource>
                <directory>src/res</directory>
                <includes>
                    <include>**/*.png</include>
                    <include>**/*.jpg</include>
                    <include>**/*.txt</include>
                </includes>
                <excludes>
                    <exclude>test/**</exclude>
                </excludes>
                <targetPath>edu/ftdev/res</targetPath>
            </resource>
        </resources>

        <plugins>
            <plugin> <!-- maven-compiler-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin> <!-- maven-shade-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/versions/9/module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <relocations>
                                <relocation>
                                    <pattern>com.google.errorprone.annotations</pattern>
                                    <shadedPattern>shaded.com.google.errorprone.annotations</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>shaded.com.google.gson</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin> <!-- maven-javadoc-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <doclint>none</doclint> <!-- Disables strict checks -->
                    <show>protected</show> <!-- Only include protected and public members -->
                    <overview>src/main/edu/ftdev/overview.html</overview>
                    <additionalOptions>-bottom "&lt;a href='overview-summary.html'&gt;Library Overview&lt;/a&gt;"</additionalOptions>
                </configuration>
                <executions>
                    <execution>
                        <phase>site</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin> <!-- maven-project-info-reports-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
            <plugin> <!-- maven-resources-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin> <!-- maven-replacer-plugin : setting the favicon on javadocs pages -->
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>maven-replacer-plugin</artifactId>
                <version>1.4.1</version>
                <executions>
                    <execution>
                        <phase>site</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>target/site/apidocs/**/*.html</include>
                            </includes>
                            <regex>false</regex>
                            <replacements>
                                <replacement>
                                    <token><![CDATA[<head>]]></token>
                                    <value><![CDATA[<head><link rel="icon" type="image/x-icon" href="https://florinteo.github.io/EduCode/res/favicon.ico">]]></value>
                                </replacement>
                            </replacements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>